SERVER-27354 Use Language neutral API to resolve performance counters