src/mongo/util/perfctr_collect.cpp
@@ -225,17 +225,17 @@ Status PerfCounterCollector::open() {
     return Status::OK();
 }
 
-StatusWith<PerfCounterCollector::CounterInfo> PerfCounterCollector::addCounter(StringData path) {
-
+StatusWith<std::tuple<PDH_HCOUNTER, std::unique_ptr<PDH_COUNTER_INFO>>>
+PerfCounterCollector::addAndGetCounter(StringData path) {
     PDH_HCOUNTER counter{0};
 
-    PDH_STATUS status =
-        PdhAddCounterW(_query, toNativeString(path.toString().c_str()).c_str(), NULL, &counter);
+    PDH_STATUS status = PdhAddEnglishCounterW(
+        _query, toNativeString(path.toString().c_str()).c_str(), NULL, &counter);
 
     if (status != ERROR_SUCCESS) {
-        return {ErrorCodes::WindowsPdhError, formatFunctionCallError("PdhAddCounterW", status)};
+        return {ErrorCodes::WindowsPdhError,
+                formatFunctionCallError("PdhAddEnglishCounterW", status)};
     }
-
     DWORD bufferSize = 0;
 
     status = PdhGetCounterInfoW(counter, false, &bufferSize, nullptr);
@@ -245,13 +245,25 @@ StatusWith<PerfCounterCollector::CounterInfo> PerfCounterCollector::addCounter(S
     }
 
     auto buf = std::make_unique<char[]>(bufferSize);
-    auto counterInfo = reinterpret_cast<PPDH_COUNTER_INFO>(buf.get());
-
-    status = PdhGetCounterInfoW(counter, false, &bufferSize, counterInfo);
+    std::unique_ptr<PDH_COUNTER_INFO> counterInfo(
+        reinterpret_cast<PPDH_COUNTER_INFO>(buf.release()));
+    status = PdhGetCounterInfoW(counter, false, &bufferSize, counterInfo.get());
 
     if (status != ERROR_SUCCESS) {
         return {ErrorCodes::WindowsPdhError, formatFunctionCallError("PdhGetCounterInfoW", status)};
     }
+
+    return std::tuple<PDH_HCOUNTER, std::unique_ptr<PDH_COUNTER_INFO>>{counter,
+                                                                       std::move(counterInfo)};
+}
+
+StatusWith<PerfCounterCollector::CounterInfo> PerfCounterCollector::addCounter(StringData path) {
+    auto swCounterInfo = addAndGetCounter(path);
+    if (!swCounterInfo.isOK()) {
+        return swCounterInfo.getStatus();
+    }
+
+    auto [counter, counterInfo] = std::move(swCounterInfo.getValue());
 
     // A full qualified path is as such:
     // "\\MYMACHINE\\Processor(0)\\% Idle Time"
@@ -289,9 +301,25 @@ StatusWith<PerfCounterCollector::CounterInfo> PerfCounterCollector::addCounter(S
 
 StatusWith<std::vector<PerfCounterCollector::CounterInfo>> PerfCounterCollector::addCounters(
     StringData path) {
-    std::wstring pathWide = toNativeString(path.toString().c_str());
+
+    auto swCounterInfo = addAndGetCounter(path);
+    if (!swCounterInfo.isOK()) {
+        return swCounterInfo.getStatus();
+    }
+
+    auto [unexpandedCounter, counterInfo] = std::move(swCounterInfo.getValue());
+
+    PDH_STATUS status = PdhRemoveCounter(unexpandedCounter);
+    if (status != ERROR_SUCCESS) {
+        return {ErrorCodes::WindowsPdhError,
+                str::stream() << formatFunctionCallError("PdhRemoveCounter", status)
+                              << " for counter '" << path << "'"};
+    }
+
+    auto localizedPath = counterInfo->szFullPath;
+
     DWORD pathListLength = 0;
-    PDH_STATUS status = PdhExpandCounterPathW(pathWide.c_str(), nullptr, &pathListLength);
+    status = PdhExpandCounterPathW(localizedPath, nullptr, &pathListLength);
 
     if (status != PDH_MORE_DATA) {
         return {ErrorCodes::WindowsPdhError,
@@ -301,7 +329,7 @@ StatusWith<std::vector<PerfCounterCollector::CounterInfo>> PerfCounterCollector:
 
     auto buf = std::make_unique<wchar_t[]>(pathListLength);
 
-    status = PdhExpandCounterPathW(pathWide.c_str(), buf.get(), &pathListLength);
+    status = PdhExpandCounterPathW(localizedPath, buf.get(), &pathListLength);
 
     if (status != ERROR_SUCCESS) {
         return {ErrorCodes::WindowsPdhError,
